fix: changed z-index fo nav to 10

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ code {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 10;
   /* height: 30px; */
 }
 .header-content {
